refresh token - custom trim-whitespace